--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "w5-monuments-guillem-front",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "public/index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "serve public",
+    "build": "tsc",
+    "build:dev": "tsc -w",
     "prepare": "husky"
   },
   "keywords": [],
@@ -14,6 +16,8 @@
   "devDependencies": {
     "@commitlint/cli": "^19.4.0",
     "@commitlint/config-conventional": "^19.2.2",
-    "husky": "^9.1.4"
+    "husky": "^9.1.4",
+    "serve": "^14.2.3",
+    "typescript": "^5.5.4"
   }
 }
