--- a/package.json
+++ b/package.json
@@ -16,7 +16,14 @@
   "devDependencies": {
     "@commitlint/cli": "^19.4.0",
     "@commitlint/config-conventional": "^19.2.2",
+    "@typescript-eslint/eslint-plugin": "7.18",
+    "@typescript-eslint/parser": "7.18",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-xo": "^0.45.0",
+    "eslint-config-xo-typescript": "^5.0.0",
     "husky": "^9.1.4",
+    "lint-staged": "^15.2.8",
     "serve": "^14.2.3",
     "typescript": "^5.5.4"
   }
