--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "jest-ts-webcompat-resolver": "^1.0.0",
     "lint-staged": "^15.2.8",
+    "prettier": "^3.3.3",
     "serve": "^14.2.3",
     "ts-jest": "^29.2.4",
     "typescript": "^5.5.4"
