--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,14 @@
   "overrides": [
     {
       "extends": ["xo-typescript", "prettier"],
-      "files": ["*.ts", "*.tsx"]
+      "files": ["*.ts", "*.tsx"],
+      "rules": {
+        "@typescript-eslint/consistent-type-definitions": [
+          "error",
+          "interface"
+        ],
+        "@typescript-eslint/triple-slash-reference": "off"
+      }
     }
   ],
   "parserOptions": {
