--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,7 @@
     "es2021": true,
     "node": true
   },
+  "ignorePatterns": ["vite.config.ts"],
   "extends": ["xo", "prettier"],
   "overrides": [
     {
@@ -21,5 +22,6 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
+
   "rules": {}
 }
