--- a/package.json
+++ b/package.json
@@ -3,20 +3,14 @@
   "version": "1.0.0",
   "main": "dist/index.js",
   "type": "module",
-  "lint-staged": {
-    "*.{ts,tsx}": [
-      "prettier --write",
-      "eslint --max-warnings 0"
-    ]
-  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "prepare": "husky",
-    "test:dev": "jest --watch",
-    "test": "jest",
-    "test:coverage": "jest --coverage"
+    "test:dev": "vitest",
+    "test": "vitest run",
+    "test:coverage": "vitest run --coverage"
   },
   "keywords": [],
   "author": "",
@@ -28,6 +22,7 @@
     "@types/jest": "^29.5.12",
     "@typescript-eslint/eslint-plugin": "7.18",
     "@typescript-eslint/parser": "7.18",
+    "@vitest/coverage-v8": "^2.0.5",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-xo": "^0.45.0",
@@ -42,7 +37,8 @@
     "ts-jest": "^29.2.4",
     "ts-jest-resolver": "^2.0.1",
     "typescript": "^5.5.4",
-    "vite": "^5.4.0"
+    "vite": "^5.4.0",
+    "vitest": "^2.0.5"
   },
   "dependencies": {
     "@fontsource/nanum-gothic": "^5.0.18"
